# jinja2-components

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: publish.yml  release.yml
.github/workflows/: publish.yml  release.yml
src/jinja2_components/: __init__.py  component.py  ext.py
tests/: test_args.py  test_assign.py  test_block_tag.py  test_component.py  test_standalone_tag.py  test_templates.py
tests/templates/: template_file_tag.j2
