[tool.poetry]
name = "jinja2-components"
version = "0.0.3"
description = "Streamlined way to build and reuse your Jinja2 templates from code"
authors = ["octo-gone <nklimin007@gmail.com>"]
readme = "README.md"
repository = "https://github.com/octo-gone/jinja2-components"
homepage = "https://github.com/octo-gone/jinja2-components"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = ">=2.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
mypy = "^1.11.1"
coverage = "^7.6.1"

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.coverage.report]
exclude_also = [
    "if t.TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
